# backend/src/storageController.ts
@@ -1,32 +1,35 @@
-import { Controller, Get, Route, Security } from '@tsoa/runtime';
+import { Controller, Delete, Get, Post, Route, Security } from '@tsoa/runtime';
 
-import * as fs from 'fs';
-import * as path from 'path';
+import * as Storage from './storage';
 
 @Route('/api/storage')
 @Security('bearer_token')
 export class StorageController extends Controller {
-    /**
-     * Download the DB containing all the stats.
-     */
-    @Get('/database')
-    async downloadDatabase(): Promise<NodeJS.ReadableStream | void> {
-        const dbPath = path.resolve(__dirname, '../storage/database.sqlite');
-        try {
-            await fs.promises.access(dbPath, fs.constants.F_OK);
+	/**
+	 * Download the DB containing all the stats.
+	 */
+	@Get('/database')
+	async downloadDatabase(): Promise<NodeJS.ReadableStream | void> {
+		try {
+			this.setHeader('Content-Type', 'application/octet-stream');
+			this.setHeader('Content-Disposition', 'attachment; filename=database.sqlite');
+			return Storage.downloadDB();
+		} catch (error: any) {
+			if (error.code === 'ENOENT') {
+				this.setStatus(404);
+			} else {
+				console.log(error);
+				this.setStatus(500);
+			}
+		}
+	}
 
-            this.setHeader('Content-Type', 'application/octet-stream');
-            this.setHeader('Content-Disposition', 'attachment; filename=database.sqlite');
+	@Post('/database')
+	async replaceDatabase() {}
 
-            const stream = fs.createReadStream(dbPath);
-            return stream;
-        } catch (error: any) {
-            if (error.code === 'ENOENT') {
-                this.setStatus(404);
-            } else {
-                console.log(error);
-                this.setStatus(500);
-            }
-        }
-    }
+	@Delete('/database')
+	async deleteDatabase() {}
+
+	@Delete('/stats')
+	async deleteStats() {}
 }
